--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "vite": "^5.2.0"
   },
   "dependencies": {
+    "browser-image-compression": "^2.0.2",
     "firebase": "^10.12.2",
     "svelte-spa-router": "^4.0.1"
   }
